--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
   "dependencies": {
     "hubot":         ">= 2.6.0 < 3.0.0",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
-    "hubot-flowdock": ">= 0.0.6"  
+    "hubot-flowdock": ">= 0.0.6"
 },
 
   "engines": {
-    "node": ">= 0.8.x",
-    "npm":  ">= 1.1.x"
+    "node": "0.8.x",
+    "npm":  "1.1.x"
   }
 }
