--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   "dependencies": {
     "hubot":         ">= 2.6.0 < 3.0.0",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
-    "hubot-flowdock": ">= 0.6.0",
-    "node-schedule": "0.2.9"
+    "hubot-flowdock": ">= 0.6.0"
 }
 }
