--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "hubot":         ">= 2.6.0 < 3.0.0",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "hubot-flowdock": ">= 0.6.0",
-    "moment-timezone": "0.4.0"
-}
+    "moment-timezone": "0.4.0",
+    "cron": "^1.0.9",
+    "moment": "^2.10.2"
+  }
 }
