--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "hubot-flowdock": ">= 0.6.0",
     "moment-timezone": "0.4.0",
     "cron": "^1.0.9",
-    "moment": "^2.10.2"
+    "moment": "^2.10.2",
+    "hubot-voting": "1.0.0"
   }
 }
