--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 
 
   "dependencies": {
-    "hubot":         ">= 2.6.0 < 3.0.0",
+    "hubot":         "2.19.0",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "hubot-flowdock": ">= 0.6.0",
     "moment-timezone": "0.4.0",
