--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment-timezone": "0.4.0",
     "cron": "^1.0.9",
     "moment": "^2.10.2",
-    "hubot-voting": "1.0.0"
+    "hubot-voting": "1.0.0",
+    "hubot-business-cat": "1.5.3"
   }
 }
