--- a/package.json
+++ b/package.json
@@ -9,24 +9,23 @@
     "bot"
   ],
   "description": "A simple helpful robot for your Company",
-
-  "licenses": [{
-    "type": "MIT",
-    "url": "https://github.com/github/hubot/raw/master/LICENSE"
-  }],
-
-  "repository" : {
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/github/hubot/raw/master/LICENSE"
+    }
+  ],
+  "repository": {
     "type": "git",
     "url": "https://github.com/github/hubot.git"
   },
   "dependencies": {
-    "hubot":         "2.19.0",
-    "hubot-scripts": ">= 2.5.0 < 3.0.0",
-    "hubot-flowdock": ">= 0.6.0",
-    "moment-timezone": "0.4.0",
     "cron": "^1.0.9",
+    "hubot": "2.19.0",
+    "hubot-business-cat": "^1.5.3",
+    "hubot-flowdock": ">= 0.6.0",
+    "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "moment": "^2.10.2",
-    "hubot-voting": "1.0.0",
-    "hubot-business-cat": "1.5.3"
+    "moment-timezone": "0.4.0"
   }
 }
